edgie/components/Link.module.css
.Link {
  text-decoration: none;
  color: var(--title);
  padding: 0.5em;
  margin: 0.5em;
  width: calc(100% - 0.7em);
  border: 0.166em solid var(--title);
  padding-left: 7.5ch;
  position: relative;
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient() */
  /* https://www.google.com/search?q=css+instagram+gradient&oq=css+instagram+gradient&aqs=edge.0.0i512j0i22i30l2.3228j0j1&sourceid=chrome&ie=UTF-8 */
  /* https://stackoverflow.com/questions/40900796/css-border-image-gradient-not-working-in-safari-10 */
  border-image-slice: 2 !important;

  transition: padding-left 0.2s ease-in-out, color 0.1s ease-in-out;
}

.Link i {
  display: flex;
  width: 2em;
  justify-content: center;
  align-items: center;
}

.Link:hover {
  padding-left: 7ch;
  /* filter: hue-rotate(-10deg); */
}
.Link.invert:hover {
  color: var(--title-dark);
}

.Link .LinkBefore {
  position: absolute;
  bottom: -1px;
  left: 100%;
  right: -1px;
  top: -1px;
  z-index: -1;
  transition: left 0.1s ease-out;
}

.Link:hover .LinkBefore {
  left: -1px;
}

